@@ -3605,17 +3605,17 @@ _elm_widget_text_part_get(Eo *obj, void *_pd EINA_UNUSED, va_list *list)
 }
 
 EAPI void
-elm_widget_domain_translatable_text_part_set(Evas_Object *obj,
+elm_widget_domain_translatable_part_text_set(Evas_Object *obj,
                                              const char *part,
                                              const char *domain,
                                              const char *label)
 {
    ELM_WIDGET_CHECK(obj);
-   eo_do(obj, elm_wdg_domain_translatable_text_part_set(part, domain, label));
+   eo_do(obj, elm_wdg_domain_translatable_part_text_set(part, domain, label));
 }
 
 static void
-_elm_widget_domain_translatable_text_part_set(Eo *obj, void *_pd, va_list *list)
+_elm_widget_domain_translatable_part_text_set(Eo *obj, void *_pd, va_list *list)
 {
    const char *part = va_arg(*list, const char *);
    const char *domain = va_arg(*list, const char *);
@@ -3672,17 +3672,17 @@ _elm_widget_domain_translatable_text_part_set(Eo *obj, void *_pd, va_list *list)
 }
 
 EAPI const char *
-elm_widget_translatable_text_part_get(const Evas_Object *obj,
+elm_widget_translatable_part_text_get(const Evas_Object *obj,
                                       const char *part)
 {
    ELM_WIDGET_CHECK(obj) NULL;
    const char *ret = NULL;
-   eo_do((Eo *) obj, elm_wdg_translatable_text_part_get(part, &ret));
+   eo_do((Eo *) obj, elm_wdg_translatable_part_text_get(part, &ret));
    return ret;
 }
 
 static void
-_elm_widget_translatable_text_part_get(Eo *obj EINA_UNUSED, void *_pd, va_list *list)
+_elm_widget_translatable_part_text_get(Eo *obj EINA_UNUSED, void *_pd, va_list *list)
 {
    const char *part = va_arg(*list, const char *);
    const char **ret = va_arg(*list, const char **);
@@ -5510,8 +5510,8 @@ _class_constructor(Eo_Class *klass)
 
         EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_TEXT_PART_SET), _elm_widget_text_part_set),
         EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_TEXT_PART_GET), _elm_widget_text_part_get),
-        EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_DOMAIN_TRANSLATABLE_TEXT_PART_SET), _elm_widget_domain_translatable_text_part_set),
-        EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_TRANSLATABLE_TEXT_PART_GET), _elm_widget_translatable_text_part_get),
+        EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_DOMAIN_TRANSLATABLE_PART_TEXT_SET), _elm_widget_domain_translatable_part_text_set),
+        EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_TRANSLATABLE_PART_TEXT_GET), _elm_widget_translatable_part_text_get),
         EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_ACCESS_INFO_SET), _elm_widget_access_info_set),
         EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_ACCESS_INFO_GET), _elm_widget_access_info_get),
         EO_OP_FUNC(ELM_WIDGET_ID(ELM_WIDGET_SUB_ID_THEME_SET), _elm_widget_theme_set),
@@ -5646,8 +5646,8 @@ static const Eo_Op_Description op_desc[] = {
      EO_OP_DESCRIPTION(ELM_WIDGET_SUB_ID_TEXT_PART_SET, "description here"),
      EO_OP_DESCRIPTION(ELM_WIDGET_SUB_ID_TEXT_PART_GET, "description here"),
 
-     EO_OP_DESCRIPTION(ELM_WIDGET_SUB_ID_DOMAIN_TRANSLATABLE_TEXT_PART_SET, "description here"),
-     EO_OP_DESCRIPTION(ELM_WIDGET_SUB_ID_TRANSLATABLE_TEXT_PART_GET, "description here"),
+     EO_OP_DESCRIPTION(ELM_WIDGET_SUB_ID_DOMAIN_TRANSLATABLE_PART_TEXT_SET, "description here"),
+     EO_OP_DESCRIPTION(ELM_WIDGET_SUB_ID_TRANSLATABLE_PART_TEXT_GET, "description here"),
      EO_OP_DESCRIPTION(ELM_WIDGET_SUB_ID_ACCESS_INFO_SET, "description here"),
      EO_OP_DESCRIPTION(ELM_WIDGET_SUB_ID_ACCESS_INFO_GET, "description here"),
 
